Fixed button contrast

--- a/css/components.css
+++ b/css/components.css
@@ -11,7 +11,7 @@
     text-decoration: none;
     font-weight: bold;
     background-color: var(--primary);
-    color: var(--white);
+    color: inherit;
     padding: 1rem;
     border-radius: 0.5rem;
     font-size: large;
